--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salta fotográfico</title>
+    <title>Las maravillas del Norte</title>
     <link href="./css/style.css" rel="stylesheet">
     <link rel="icon" href=".\imgs\logo.jpg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/31818fb38f.js" crossorigin="anonymous"></script>
@@ -15,17 +15,15 @@
         <div class="navbar">
             <a href="index.html" class="item-nav"><img class="logo" src="./imgs/empresa.png"></a>
             <nav class="nav-pc">
- 
                 <a href="index.html" class="item-nav">Inicio</a>
-                <a href="index.html#SeccionViajes" class="item-nav">Nuestros Viajes</a>              
+                <a href="index.html#SeccionViajes" class="item-nav">Nuestros Viajes</a> 
                 <a href="index.html#SeccionOpiniones" class="item-nav">Opiniones</a>
-                <a href="contacto.html" class="item-nav">Contactanos</a>
+                <a href="contacto.html#SeccionContactanos" class="item-nav">Contactanos</a>
                 <a href="contacto.html#SeccionTours" class="item-nav">Info de tours</a>
             </nav>
             <nav class="nav-movile">
                 <i class="fa-solid fa-bars icon-menu" id="icon-menu"></i>
             </nav>
-
         </div>
 
     </header>
@@ -34,7 +32,7 @@
             <a href="index.html" class="item-nav-movile">Inicio</a>
             <a href="index.html#SeccionViajes" class="item-nav-movile">Nuestros Viajes</a> 
             <a href="index.html#SeccionOpiniones" class="item-nav-movile">Opiniones</a>
-            <a href="contacto.html" class="item-nav-movile">Contactanos</a>
+            <a href="contacto.html#SeccionContactanos" class="item-nav-movile">Conocenos </a>
             <a href="contacto.html#SeccionTours" class="item-nav-movile">Info de tours</a>
         </div>
         <div class="nav-movile-der">
@@ -66,7 +64,7 @@
                 Lugares a conocer: Salar de Arizaro, Cono de Arita, Tolar Grande, Mina la Casualidad, Los Colorados,
                 Ojos de Mar, Salar Pocitos, San Antonio de los Cobres.
             </p>
-            <p class="right b1">Conocé más +</p>
+            <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
         </div>
         <div class="item item-2">
             <div class="image-interior"><img src="imgs/index/sitios/Hornocal1.jpg"></div>
@@ -80,7 +78,7 @@
                 Su forma característica es resultado de un efecto de corte, que consiste en la erosión en ángulo de un
                 conjunto de capas paralelas que produce un efecto visual similar al de plegamientos (erróneamente
                 asociado a esta serranía con frecuencia).</p>
-            <p class="right b1">Conocé más +</p>
+                <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
         </div>
         <div class="item item-3">
             <div class="image-interior"><img src="imgs/index/sitios/Cachi1.jpg"></div>
@@ -92,7 +90,7 @@
                 de Quipón, El Angosto, Rancagua, Escalchi, La Paya, San José, El Barrial, El Colte, Fuerte Alto Banda
                 Norte y Banda Sur, Cachi Adentro, San Miguel, Las Arcas, Las Pailas, La Aguada, Las Trancas y El
                 Algarrobal.</p>
-            <p class="right b1">Conocé más +</p>
+                <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
         </div>
         <div class="item item-4">
             <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg"></div>
@@ -100,7 +98,7 @@
             <p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta,
                 región noroeste de Argentina. Es cabecera del departamento de Cafayate y reconocida por la calidad de
                 los vinos que allí se producen.</p>
-            <p class="right b1">Conocé más +</p>
+                <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
         </div>
 
 
@@ -114,7 +112,7 @@
                 En esta zona crecen sin riesgos árboles que alcanzaron gran talla como cebiles, nogales, cedros, quinas,
                 afatas, palos amarillos y tipas blancas que alternan con arrayanes, guayabos, matos y helechos
                 arborescentes, que resultan impresionantes a la vista. </p>
-            <p class="right b1">Conocé más +</p>
+                <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
         </div>
 
         <div class="item item-6">
@@ -125,7 +123,7 @@
             <p>Es una increíble vía natural habitada por comunidades rurales laboriosas que mantienen sus tradiciones y
                 creencias ancestrales. La quebrada conecta la zona con el Valle Calchaquí a través de la Ruta Provincial
                 N°33. Un paraíso verde y zigzagueante que sorprende a cada paso en el recorrido.</p>
-            <p class="right b1">Conocé más +</p>
+                <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
         </div>
 
     </div>
