--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
             <div class="carousel-inner">
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/baritu.jpg" alt="Imagen 1">
-                    <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y
+                    <div class="carousel-caption1"><p class="cabezal">Las maravillas del Norte</p></div>
+                    <div class="carousel-caption2"><p class="intro">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y
                         conocé todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
-                        viaje.</div>
+                        viaje.</p></div>
                 </div>
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/Cachi1.jpg" alt="Imagen 2">
