--- a/contacto.html
+++ b/contacto.html
@@ -48,7 +48,7 @@
     <main class="content-area container-fluid">
         <h3 class="titleContactenos">Conocenos más</h3>
         <section class="container" id="SeccionTours">
-            <h4 class="subTitleContactenos">Informacion de los tours:</h4>
+            <h4 class="subTitleContactenos">Información de los tours:</h4>
             <div>
                 <p class="b1">Que incluye el tour:</p>
                 <div>Guia/Fotógrafo, Transporte, Alojamiento en Refugio AFAPUNA (consultar por hotel boutique) de altura,
@@ -105,7 +105,7 @@
                     <input type="text" name="Apellido" id="apellidoID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="Direccion" class="col-6">Direccion:</label>
+                    <label for="Direccion" class="col-6">Dirección:</label>
                     <input type="text" name="Direccion" id="direccionID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
@@ -113,11 +113,11 @@
                     <input type="text" name="Ciudad" id="ciudadID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="codigopostal" class="col-6">Codigo Postal:</label>
+                    <label for="codigopostal" class="col-6">Código Postal:</label>
                     <input type="text" name="codigopostal" id="codigopostalID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="email" class="col-6">Correo Electronico:*</label>
+                    <label for="email" class="col-6">Correo Electrónico:*</label>
                     <input type="email" name="email " id="emailID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
@@ -126,30 +126,45 @@
                 </div>
 
                 <div class="row fila">
-                    <label for="genero" class="col-6">Genero:</label>
+                    <label for="genero" class="col-6">¿De qué viaje te gustaría conocer más?</label>
                     <div class="col-6">
                         <div>
                             <input type="radio" name="genero" value="Hombre" id="gHombreID">
-                            <label for="Hombre">Hombre</label>
+                            <label for="Hombre">Tolar grande</label>
                         </div>
                         <div>
                             <input type="radio" name="genero" value="Mujer" id="gMujerID">
-                            <label for="Mujer">Mujer</label>
+                            <label for="Mujer">Serranía de Hornocal</label>
                         </div>
                         <div>
                             <input type="radio" name="genero" value="Otro" id="gOtroID">
-                            <label for="Otro">Otro</label>
+                            <label for="Otro">Cachi</label>
+                        </div>
+
+                         <div>
+                            <input type="radio" name="genero" value="Otro" id="gOtroID">
+                            <label for="Otro">Cafayate</label>
+                        </div>
+
+                         <div>
+                            <input type="radio" name="genero" value="Otro" id="gOtroID">
+                            <label for="Otro">Parque Nacional Baritú</label>
+                        </div>
+
+                     <div>
+                            <input type="radio" name="genero" value="Otro" id="gOtroID">
+                            <label for="Otro">Valle encantado</label>
                         </div>
                     </div>
 
                 </div>
 
                 <div class="row fila">
-                    <label for="contacto" class="col-6">¿De donde nos conoces?</label>
+                    <label for="contacto" class="col-6">¿De dónde nos conocés?</label>
                     <div class="col-6">
                         <div>
                             <input type="checkbox" name="contacto" value="Recomendacion" id="RecomendacionID">
-                            <label for="Recomendacion">Recomendacion de nuestros clientes </label>
+                            <label for="Recomendacion">Recomendación de nuestros clientes </label>
                         </div>
                         <div>
                             <input type="checkbox" name="contacto" value="Redes sociales" id="RedesSocialesID">
@@ -169,8 +184,8 @@
         <section class="container">
             <h4 class="subTitleContactenos">Envianos un correo:</h4>
             <ul>
-                <li>Dirrección de Correo: <a href="mailto:mail@dadazas.com">mail@dadazas.com</a></li>
-                <li>Telefono: +54(911)-3819-6067</li>
+                <li>Dirrección de correo: <a href="mailto:mail@dadazas.com">mail@dadazas.com</a></li>
+                <li>Teléfono: +54(911)-3819-6067</li>
 
             </ul>
         </section>
