--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Las maravillas del Norte</title>
     <link href="./css/style.css" rel="stylesheet">
-    <link rel="icon" href=".\imgs\logo.jpg" type="image/x-icon">
+    <link rel="icon" href=".\imgs\empresa.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/31818fb38f.js" crossorigin="anonymous"></script>
 </head>
 
