--- a/contacto.html
+++ b/contacto.html
@@ -50,44 +50,45 @@
         <section class="container" id="SeccionTours">
             <h4 class="subTitleContactenos">Información de los tours:</h4>
             <div>
-                <p class="b1">Que incluye el tour:</p>
+                <p class="textitem">Que incluye el tour:</p>
                 <div>Guia/Fotógrafo, Transporte, Alojamiento en Refugio AFAPUNA (consultar por hotel boutique) de altura,
                     chofer/guía en castellano o ingles (segun se solicite) en toda la excursión.</div>
             </div>
-            <p class="b1">Que no incluye:</p>
+            <p class="textitem">Que no incluye:</p>
             <div>
                 Equipo de fotografía, Desayuno, Almuerzo, entradas a museos o similares, degustaciones pagas, propinas y
                 extras no especificados.</div>
 
-            <p class="b1">Que recomendamos llevar:</p>
+                <p class="textitem">Que recomendamos llevar:</p>
             <div>Ropa Comoda, documentos, dinero, Anteojos de sol, protector solar, gorra o sombrero, ropa de abrigo,
                 binoculares, cámara de fotos.</div>
-            <p class="b1">Politica de la empresa y cancelaciones</p>
+                <p class="textitem">Politica de la empresa y cancelaciones</p>
             <ul>
                 <li>
-                    <p class="b1">Transporte:</p> El tipo de vehículo asignado quedara pura y exclusivamente a criterio
+                    <p class="textitem">Transporte:</p> El tipo de vehículo asignado quedara pura y exclusivamente a criterio
                     de La
                     Empresa.</p>
                 </li>
                 <li>
-                    <p>Equipaje:</p> El equipaje y demás objetos corren por cuenta y riesgo de los pasajeros.
+                    <p class="textitem">Equipaje:</p> El equipaje y demás objetos corren por cuenta y riesgo de los pasajeros.
                 </li>
-                <li>Documentación:</p> La presentación de documentación para la realización del viaje contratado, queda
+                <li><p class="textitem">Documentación:</p> La presentación de documentación para la realización del viaje contratado, queda
                     a
                     cargo de los pasajeros.</li>
                 <li>
-                    <p>Derecho de permanencia:</p> La Empresa se reserva el derecho de permanencia de pasajeros que por
+                    <p class="textitem">Derecho de permanencia:</p> La Empresa se reserva el derecho de permanencia de pasajeros que por
                     mala
                     conducta, higiene, salud u otro motivo constituyan incomodidad para los demás integrantes del viaje.
                 </li>
                 <li>
-                    <p>Cancelaciones:</p> Para las cancelaciones realizadas faltando 3 días para el inicio del viaje, se
+                    <p class="textitem">Cancelaciones:</p> Para las cancelaciones realizadas faltando 3 días para el inicio del viaje, se
                     descontara el 30% de total, para cancelaciones realizadas faltando 2 días, se descontara el 50% del
                     total y
                     para cancelaciones dentro de las 24 horas, La Empresa no efectuara devolución alguna.
                 </li>
                 <li>
-                    <p>Pagos:</p> La reserva quedara confirmada una vez hecho el pago del 50% del servicio contratado,
+                    <p class="textitem">Pagos:</p>
+                    La reserva quedara confirmada una vez hecho el pago del 50% del servicio contratado,
                     debiendo
                     el pasajero completar el saldo restante (50%) en el momento de iniciar el viaje.
                 </li>
@@ -95,7 +96,7 @@
         </section>
         <section class="container" id="SeccionContactanos">
             <h4 class="subTitleContactenos">Contactanos:</h4>
-            <form class="container-fluid" id="Form" onsubmit="return validacionFormulario()">
+            <form class="container-fluid" id="Form">
                 <div class="row fila">
                     <label for="Nombre" class="col-6">Nombre: *</label>
                     <input type="text" name="Nombre" id="nombreID" class="col-6 textinp">
@@ -207,7 +208,7 @@
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/31818fb38f.js" crossorigin="anonymous"></script>
-    <script src="js/app.js"></script>
+    <script src="js/contactApp.js"></script>
 </body>
 
 </html>
