--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/baritu.jpg" alt="Imagen 1">
                     <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y
+                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
                         conocé todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
                         viaje.</div>
@@ -54,7 +54,7 @@
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/Cachi1.jpg" alt="Imagen 2">
                     <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y
+                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
                         conocé todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
                         viaje.</div>
@@ -63,7 +63,7 @@
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/Cachi2.webp" alt="Imagen 3">
                     <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y
+                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
                         conocé todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
                         viaje.</div>
@@ -72,7 +72,7 @@
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/Cafayate1.jpg" alt="Imagen 4">
                     <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar.<br /> Viajá con nosotros y
+                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
                         conocé
                         todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
@@ -80,9 +80,6 @@
                     </div>
                 </div>
             </div>
-        
-        <button class="prev" onclick="prevSlide()">&#10094;</button>
-        <button class="next" onclick="nextSlide()">&#10095;</button>
         </div>
     </section>
     <section id="SeccionViajes">
@@ -233,7 +230,7 @@
         </div>
         <p>Derechos reservados @2024</p>
     </footer>
-    <script src="js/app.js"></script>
+    <script src="js/indexApp.js"></script>
 </body>
 
 </html>
