--- a/index.html
+++ b/index.html
@@ -139,10 +139,13 @@
             <div class="item item-4">
                 <div class="image-interior"><img src="imgs/index/sitios/Cafayate1.jpg"></div>
                 <h2>Cafayate</h2>
-                <p>Cafayate es una localidad de los valles Calchaquíes situada en el sudoeste de la provincia de Salta,
-                    región noroeste de Argentina. Es cabecera del departamento de Cafayate y reconocida por la calidad
-                    de
-                    los vinos que allí se producen.</p>
+                <p>Cafayate es la ciudad más importante dentro del circuito turístico de los Valles Calchaquíes. 
+                    Aún conserva las características de su arquitectura colonial; sus calles, su iglesia. 
+                    Un atractivo particular es el molino de maíz del siglo XVIII, hecho por los Jesuitas.
+                    Entre sus atractivos turísticos, tanto culturales como naturales, se destacan: 
+                    Museo de la Vid y el Vino, Museo Regional y Arqueológico, Paseo de los Artesanos 
+                    frente de la plaza principal, su gastronomía regional, la quebrada de las Conchas o quebrada 
+                    de Cafayate y pueblos cercanos como San Pedro de Yacochuya, entre otros. </p>
                 <a href="contacto.html#SeccionTours" class="ConoceMas">Conocé más +</a>
             </div>
 
@@ -203,17 +206,35 @@
                 <p class="nombre"><b>Lorena Oholeguy</b></p>
                 <p class="resena"> Muy linda experiencia, excelente el guía Oscar los conductores muy buenos se
                     preocupan todo el tiempo por todos nosotros los lugares buenísimo, muy conformes con todos, muy
-                    buenos los paseos .muchas gracias</p>
+                    buenos los paseos, muchas gracias</p>
                 <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@LoreOle</span></p>
             </div>
             <div class="item2 item-4">
                 <p class="viaje">Tolar grande</p>
                 <p class="nombre"><b>Jorge Huerta Gonzalez</b></p>
-                <p class="resena"> Lugar mágico, lleno de historia y rodeado de bellezas naturales increibles. La
-                    excursión fue muy buena, se conocen lugares únicos por su belleza, se come muy rico en Cachi, se ve
-                    fauna muy como las llamas y los cóndores. Mi única recomendación es dar más tiempo en Cachi. Se
+                <p class="resena"> Lugar mágico  rodeado de bellezas naturales increibles. La
+                    excursión fue muy buena, se conocen lugares únicos por su belleza, se come muy rico, se ve
+                    fauna muy como las llamas y los cóndores. Se
                     queda uno con ganas de pasar más tiempo.</p>
                 <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@JorgeHuertas</span></p>
+            </div>
+
+            <div class="item2 item-5">
+                <p class="viaje">Parque Nacional Baritú</p>
+                <p class="nombre"><b>Pedro Fernández</b></p>
+                <p class="resena">Inpresionante el paisaje y las experiencias vividas allí, cada paso nos adentrábamos en
+                    la belleza de la flora y la fauna. Una experiencia realmente inolvidable y por suerte logramos capturar 
+                    en nuestras fotografías. </p>
+                <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@Pedro89</span></p>
+            </div>
+
+            <div class="item2 item-6">
+                <p class="viaje">Valle encantado</p>
+                <p class="nombre"><b>Sandra Román</b></p>
+                <p class="resena">Lugar mágico escondido en la cumbre de la Cuesta del Obispo, vale la pena lo recorrido para encontrar este 
+                 valle donde se pueden ver que extrañas formaciones rocosas labradas y los verdes campos. Es realmente impresionante ver los Cóndores de tan cerca y ser
+                  privilegiados con esta vista. Fuimos fotografiando la experiencia de caminata y la llegada a destino fue un regalo. Lo recomiendo ampliamente. </p>
+                <p class="mira">Mirá sus fotos en: <br /><span class="naranja">@Sandrus</span></p>
             </div>
         </div>
 
