--- a/index.html
+++ b/index.html
@@ -45,38 +45,38 @@
             <div class="carousel-inner">
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/baritu.jpg" alt="Imagen 1">
-                    <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
+                    <div class="carousel-caption1"><h1>Las maravillas del Norte</h1></div>
+                    <div class="carousel-caption2"><p>Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
                         conocé todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
-                        viaje.</div>
+                        viaje.</p></div>
                 </div>
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/Cachi1.jpg" alt="Imagen 2">
-                    <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
+                    <div class="carousel-caption1"><h1>Las maravillas del Norte</h1></div>
+                    <div class="carousel-caption2"><p>Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
                         conocé todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
-                        viaje.</div>
+                        viaje.</p></div>
                 </div>
 
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/Cachi2.webp" alt="Imagen 3">
-                    <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
+                    <div class="carousel-caption1"><h1>Las maravillas del Norte</h1></div>
+                    <div class="carousel-caption2"><p>Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
                         conocé todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
-                        viaje.</div>
+                        viaje.</p></div>
                 </div>
 
                 <div class="carousel-item">
                     <img src="imgs/index/sitios/Cafayate1.jpg" alt="Imagen 4">
-                    <div class="carousel-caption1">Las maravillas del Norte</div>
-                    <div class="carousel-caption2">Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
+                    <div class="carousel-caption1"><h1>Las maravillas del Norte</h1></div>
+                    <div class="carousel-caption2"><p>Nos encanta la fotografía y amamos viajar. Viajá con nosotros y
                         conocé
                         todas las
                         experiencias alternativas que te proponemos para disfrutar de la naturaleza, la fotografía y el
-                        viaje.
+                        viaje.</p>
                     </div>
                 </div>
             </div>
