--- a/contacto.html
+++ b/contacto.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Las maravillas del Norte</title>
 
-    <link rel="icon" href=".\imgs\logo.jpg" type="image/x-icon">
+    <link rel="icon" href=".\imgs\empresa.png" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -50,19 +50,19 @@
         <section class="container" id="SeccionTours">
             <h4 class="subTitleContactenos">Información de los tours:</h4>
             <div>
-                <p class="textitem">Que incluye el tour:</p>
-                <div>Guia/Fotógrafo, Transporte, Alojamiento en Refugio AFAPUNA (consultar por hotel boutique) de altura,
-                    chofer/guía en castellano o ingles (segun se solicite) en toda la excursión.</div>
+                <p class="textitem">Qué incluye el tour:</p>
+                <div>Guia/Fotógrafo, transporte, alojamiento (consultar por opciones), 
+                    guía en castellano o ingles (segun se solicite) en toda la excursión.</div>
             </div>
-            <p class="textitem">Que no incluye:</p>
+            <p class="textitem">Qué no incluye:</p>
             <div>
                 Equipo de fotografía, Desayuno, Almuerzo, entradas a museos o similares, degustaciones pagas, propinas y
                 extras no especificados.</div>
 
-                <p class="textitem">Que recomendamos llevar:</p>
-            <div>Ropa Comoda, documentos, dinero, Anteojos de sol, protector solar, gorra o sombrero, ropa de abrigo,
+                <p class="textitem">Qué recomendamos llevar:</p>
+            <div>Ropa cómoda, documentos, dinero, anteojos de sol, protector solar, gorra o sombrero, ropa de abrigo,
                 binoculares, cámara de fotos.</div>
-                <p class="textitem">Politica de la empresa y cancelaciones</p>
+                <p class="textitem">Política de la empresa y cancelaciones</p>
             <ul>
                 <li>
                     <p class="textitem">Transporte:</p> El tipo de vehículo asignado quedara pura y exclusivamente a criterio
@@ -118,16 +118,16 @@
                     <input type="text" name="codigopostal" id="codigopostalID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="email" class="col-6">Correo Electrónico:*</label>
+                    <label for="email" class="col-6">Correo electrónico:*</label>
                     <input type="email" name="email " id="emailID" class="col-6 textinp">
                 </div>
                 <div class="row fila">
-                    <label for="telefono" class="col-6">Telefono:*</label>
+                    <label for="telefono" class="col-6">Teléfono:*</label>
                     <input type="text" name="telefono " id="telefonoID" class="col-6 textinp">
                 </div>
 
                 <div class="row fila">
-                    <label for="genero" class="col-6">¿De qué viaje te gustaría conocer más?</label>
+                    <label for="genero" class="col-6">¿De cuál de nuestros tours te gustaría conocer más?</label>
                     <div class="col-6">
                         <div>
                             <input type="radio" name="genero" value="Hombre" id="gHombreID">
