--- a/contacto.html
+++ b/contacto.html
@@ -52,11 +52,11 @@
             <div>
                 <p class="textitem">Qué incluye el tour:</p>
                 <div>Guia/Fotógrafo, transporte, alojamiento (consultar por opciones), 
-                    guía en castellano o ingles (segun se solicite) en toda la excursión.</div>
+                    guía en castellano o inglés (según se solicite) en toda la excursión.</div>
             </div>
             <p class="textitem">Qué no incluye:</p>
             <div>
-                Equipo de fotografía, Desayuno, Almuerzo, entradas a museos o similares, degustaciones pagas, propinas y
+                Equipo de fotografía, desayuno, almuerzo, entradas a museos o similares, degustaciones pagas, propinas y
                 extras no especificados.</div>
 
                 <p class="textitem">Qué recomendamos llevar:</p>
@@ -66,8 +66,8 @@
             <ul>
                 <li>
                     <p class="textitem">Transporte:</p> El tipo de vehículo asignado quedara pura y exclusivamente a criterio
-                    de La
-                    Empresa.</p>
+                    de la
+                    empresa.</p>
                 </li>
                 <li>
                     <p class="textitem">Equipaje:</p> El equipaje y demás objetos corren por cuenta y riesgo de los pasajeros.
@@ -84,7 +84,7 @@
                     <p class="textitem">Cancelaciones:</p> Para las cancelaciones realizadas faltando 3 días para el inicio del viaje, se
                     descontara el 30% de total, para cancelaciones realizadas faltando 2 días, se descontara el 50% del
                     total y
-                    para cancelaciones dentro de las 24 horas, La Empresa no efectuara devolución alguna.
+                    para cancelaciones dentro de las 24 horas, la empresa no efectuara devolución alguna.
                 </li>
                 <li>
                     <p class="textitem">Pagos:</p>
@@ -127,7 +127,7 @@
                 </div>
 
                 <div class="row fila">
-                    <label for="genero" class="col-6">¿De cuál de nuestros tours te gustaría conocer más?</label>
+                    <label for="genero" class="col-6">¿Te gustaría recibir más info de nuestros tours?</label>
                     <div class="col-6">
                         <div>
                             <input type="radio" name="genero" value="Hombre" id="gHombreID">
